Update: Dashboard fixes, Auth features (Edit Profile, Change Password), Style adjustments

--- a/www/index.html
+++ b/www/index.html
@@ -18,11 +18,11 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.31/jspdf.plugin.autotable.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="js/pdf-helper.js"></script>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/styles.css?v=2026-02-13-v4">
     <link rel="stylesheet" href="css/mobile.css">
     <link rel="stylesheet" href="css/modern-styles.css">
     <link rel="stylesheet" href="css/overview-modern.css">
-    <link rel="stylesheet" href="css/fix-styles.css">
+    <link rel="stylesheet" href="css/fix-styles.css?v=2026-02-13-v4">
     <link rel="stylesheet" href="css/extra-modals.css">
 
     <meta name="description" content="Sistema moderno de gerenciamento para Hotel Pet CÁ - Aplicativo Nativo Android">
@@ -92,6 +92,14 @@
             <span class="mobile-header-title" id="mobile-page-title">Visão Geral</span>
         </div>
         <div class="mobile-header-right">
+            <!-- Mobile User Profile -->
+            <div id="mobile-user-profile" class="mobile-user-profile"
+                onclick="window.authManager.toggleProfileMenu(event)"
+                style="display: none; margin-right: 0.5rem; align-items: center; cursor: pointer;">
+                <img id="mobile-user-avatar" class="header-user-avatar" src="" alt="Avatar"
+                    style="width: 36px; height: 36px; border-width: 1.5px;">
+            </div>
+
             <div class="notification-wrapper">
                 <button class="header-notification-btn" id="notification-btn">
                     <i class="fas fa-bell"></i>
@@ -119,6 +127,9 @@
             </div>
             <button class="sidebar-toggle" onclick="toggleSidebar()"><i class="fas fa-bars"></i></button>
         </div>
+
+        <!-- User Profile Header REMOVED FROM SIDEBAR -->
+
         <ul class="sidebar-menu">
             <li class="menu-item active" data-section="overview"><a href="#" onclick="navigateToSection('overview')"><i
                         class="fas fa-eye"></i><span>Visão Geral</span></a></li>
@@ -147,6 +158,37 @@
                     <div class="page-header-content">
                         <h1>Visão Geral</h1>
                         <p>Status das acomodações</p>
+                    </div>
+
+                    <!-- Header Actions (Notification + Profile) -->
+                    <div class="header-actions-group"
+                        style="display: flex; align-items: center; gap: 15px; margin-left: auto;">
+                        <!-- Desktop Notification -->
+                        <div class="notification-wrapper desktop-only">
+                            <button class="header-notification-btn" id="desktop-notification-btn">
+                                <i class="fas fa-bell"></i>
+                                <span class="notification-badge desktop-badge" style="display: none;">0</span>
+                            </button>
+
+                            <div class="notification-dropdown" id="notification-dropdown-desktop">
+                                <div class="notification-header">
+                                    <h3>Notificações</h3>
+                                    <button class="btn-clear-notifications"
+                                        id="clear-notifications-desktop">Limpar</button>
+                                </div>
+                                <div class="notification-list" id="notification-list-desktop">
+                                    <p class="empty-notifications">Nenhuma notificação no momento.</p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Header Profile Display -->
+                        <div id="header-user-profile" class="header-user-profile"
+                            onclick="window.authManager.toggleProfileMenu(event)"
+                            style="display: none; margin-left: 0; cursor: pointer;">
+                            <span id="header-user-name" class="header-user-name">Nome do Usuário</span>
+                            <img id="header-user-avatar" class="header-user-avatar" src="" alt="Avatar">
+                        </div>
                     </div>
                 </div>
                 <div id="kennels-visualization" class="kennels-container"></div>
@@ -593,24 +635,8 @@
                 <div class="settings-container">
 
                     <!-- APARÊNCIA -->
-                    <div class="settings-group">
-                        <h3>Aparência</h3>
-                        <div class="settings-card">
-                            <div class="setting-row">
-                                <div class="setting-info">
-                                    <div class="setting-icon dark-icon"><i class="fas fa-moon"></i></div>
-                                    <div>
-                                        <strong>Modo Escuro</strong>
-                                        <span>Interface com cores escuras para descanso visual</span>
-                                    </div>
-                                </div>
-                                <label class="switch">
-                                    <input type="checkbox" id="dark-mode-toggle">
-                                    <span class="slider round"></span>
-                                </label>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- APARÊNCIA (REMOVIDO MODO ESCURO) -->
+                    <!-- MODO ESCURO REMOVED AS PER REQUEST -->
 
                     <!-- INTELIGÊNCIA ARTIFICIAL -->
                     <div class="settings-group">
@@ -1034,9 +1060,9 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <script src="js/supabase-config.js"></script>
     <script src="js/supabase-db.js"></script>
-    <script src="js/auth.js"></script>
+    <script src="js/auth.js?v=2026-02-13-v3"></script>
     <!-- <script src="js/database.js"></script> -->
-    <script src="js/dashboard.js"></script>
+    <script src="js/dashboard.js?v=2026-02-13-v2"></script>
     <script src="js/animals.js"></script>
     <script src="js/reservations.js"></script>
     <script src="js/reports.js"></script>
@@ -1121,11 +1147,9 @@
             </div>
 
             <div class="auth-tabs">
-                <div class="auth-tab pointer active"
-                    onclick="document.getElementById('auth-login').classList.add('active'); document.getElementById('auth-register').classList.remove('active'); this.classList.add('active'); this.nextElementSibling.classList.remove('active');">
+                <div class="auth-tab pointer active" data-target="auth-login">
                     Entrar</div>
-                <div class="auth-tab pointer"
-                    onclick="document.getElementById('auth-login').classList.remove('active'); document.getElementById('auth-register').classList.add('active'); this.classList.add('active'); this.previousElementSibling.classList.remove('active');">
+                <div class="auth-tab pointer" data-target="auth-register">
                     Cadastrar</div>
             </div>
 
@@ -1152,6 +1176,23 @@
             <!-- Register Form -->
             <div id="auth-register" class="auth-form-container">
                 <form id="auth-register-form">
+                    <div class="auth-photo-upload" style="flex-direction: column; align-items: center; gap: 0.5rem;">
+                        <label for="reg-photo-input" class="auth-photo-label" title="Escolher foto">
+                            <div class="auth-photo-preview" id="reg-photo-preview">
+                                <i class="fas fa-camera auth-photo-icon"></i>
+                                <img id="reg-preview-img"
+                                    style="display:none; width:100%; height:100%; object-fit:cover;">
+                            </div>
+                            <input type="file" id="reg-photo-input" class="input-file-hidden" accept="image/*">
+                        </label>
+                        <span style="font-size: 0.8rem; color: #64748b;">Toque para adicionar foto</span>
+                    </div>
+
+                    <div class="auth-input-group">
+                        <label>Nome do Perfil</label>
+                        <input type="text" id="reg-name" class="auth-input" placeholder="Ex: Rafael Almeida" required>
+                    </div>
+
                     <div class="auth-input-group">
                         <label>Email</label>
                         <input type="email" id="reg-email" class="auth-input" placeholder="seu@email.com" required>
@@ -1165,7 +1206,7 @@
                         <i class="fas fa-user-plus"></i> Criar Conta
                     </button>
                     <div class="auth-footer" style="margin-top: 10px; cursor: pointer;"
-                        onclick="document.querySelector('.auth-tab.active').click()">Voltar para Login</div>
+                        onclick="document.querySelector('.auth-tab:first-child').click()">Voltar para Login</div>
                 </form>
             </div>
 
@@ -1203,6 +1244,31 @@
                     <button type="submit" class="btn-auth-submit">
                         <i class="fas fa-save"></i> Salvar Nova Senha
                     </button>
+                    <div class="auth-footer" style="margin-top: 10px; cursor: pointer;"
+                        onclick="window.authManager.cancelEditProfile()">Cancelar</div>
+                </form>
+            </div>
+
+            <!-- Edit Profile Form -->
+            <div id="auth-edit-profile" class="auth-form-container">
+                <div class="auth-header" style="margin-bottom: 1rem;">
+                    <h3 class="auth-title" style="font-size: 1.2rem;">Editar Perfil</h3>
+                    <p class="auth-subtitle">Atualize suas informações.</p>
+                </div>
+                <form id="auth-edit-profile-form">
+                    <div class="auth-input-group">
+                        <label>Nome Completo</label>
+                        <input type="text" id="edit-profile-name" class="auth-input" placeholder="Seu Nome" required>
+                    </div>
+                    <div class="auth-input-group">
+                        <label>Avatar URL</label>
+                        <input type="text" id="edit-profile-avatar" class="auth-input" placeholder="URL da imagem">
+                    </div>
+                    <button type="submit" class="btn-auth-submit">
+                        <i class="fas fa-save"></i> Salvar Alterações
+                    </button>
+                    <div class="auth-footer" style="margin-top: 10px; cursor: pointer;"
+                        onclick="window.authManager.cancelEditProfile()">Cancelar</div>
                 </form>
             </div>
 
@@ -1228,6 +1294,24 @@
             }
         });
     </script>
+    <!-- Global Profile Menu Dropdown -->
+    <div id="global-profile-menu" class="profile-menu-dropdown">
+        <div class="menu-header-info">
+            <img id="menu-dropdown-avatar" src="css/logo.png" alt="User">
+            <div class="user-details">
+                <strong id="menu-dropdown-name">Usuário</strong>
+                <span id="menu-dropdown-email">email@exemplo.com</span>
+            </div>
+        </div>
+        <div class="menu-divider"></div>
+        <ul class="menu-list">
+            <li onclick="window.authManager.openEditProfile()"><i class="fas fa-user-edit"></i> Editar Perfil</li>
+            <li onclick="window.authManager.openChangePassword()"><i class="fas fa-key"></i> Alterar Senha</li>
+            <div class="menu-divider"></div>
+            <li onclick="window.authManager.logout()" class="text-danger"><i class="fas fa-sign-out-alt"></i> Sair</li>
+        </ul>
+    </div>
+
 </body>
 
 </html>
