--- a/www/index.html
+++ b/www/index.html
@@ -638,73 +638,7 @@
                     <!-- APARÊNCIA (REMOVIDO MODO ESCURO) -->
                     <!-- MODO ESCURO REMOVED AS PER REQUEST -->
 
-                    <!-- INTELIGÊNCIA ARTIFICIAL -->
-                    <div class="settings-group">
-                        <h3>Inteligência Artificial (IA)</h3>
-                        <div class="settings-card ia-card-modern">
-                            <div class="ia-info">
-                                <i class="fas fa-brain fa-2x ia-icon-glow"></i>
-                                <p>Potencialize seu marketing e análise com IA de ponta. Escolha seu provedor preferido.
-                                </p>
-                            </div>
-
-                            <div class="provider-grid">
-                                <button class="provider-pill active" data-provider="gemini">
-                                    <i class="fab fa-google"></i> Gemini
-                                </button>
-                                <button class="provider-pill" data-provider="pollinations">
-                                    <i class="fas fa-bolt"></i> Pollinations
-                                </button>
-                                <button class="provider-pill" data-provider="huggingface">
-                                    <i class="fas fa-face-smile"></i> Hugging Face
-                                </button>
-                            </div>
-
-                            <div id="api-key-container" class="api-field-group">
-                                <label>Chave de Acesso Oficial</label>
-                                <div class="premium-input-wrapper">
-                                    <input type="password" id="ai-api-key" placeholder="Insira sua chave API...">
-                                    <button class="visibility-toggle" onclick="togglePassword('ai-api-key')">
-                                        <i class="fas fa-eye"></i>
-                                    </button>
-                                </div>
-                                <div class="api-actions">
-                                    <a href="https://aistudio.google.com/app/apikey" target="_blank" class="help-link">
-                                        Obter chave <i class="fas fa-external-link-alt"></i>
-                                    </a>
-                                    <button id="btn-save-api" class="btn btn-primary btn-sm">Salvar
-                                        Configurações</button>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- DADOS E BACKUP -->
-                    <div class="settings-group">
-                        <h3>Cloud & Backup</h3>
-                        <div class="settings-card">
-                            <div class="setting-row">
-                                <div class="setting-info">
-                                    <div class="setting-icon drive-icon"><i class="fab fa-google-drive"></i></div>
-                                    <div class="drive-label-group">
-                                        <strong>Sincronização na Nuvem</strong>
-                                        <span id="drive-status-label">Backup automático desativado</span>
-                                    </div>
-                                </div>
-                                <div class="drive-actions">
-                                    <button id="btn-google-login" class="btn btn-outline-primary btn-sm">
-                                        <i class="fab fa-google"></i> Conectar Drive
-                                    </button>
-                                    <div id="drive-status" style="display: none;">
-                                        <div class="connected-badge">
-                                            <i class="fas fa-check-circle"></i>
-                                            <span id="user-email">email@google.com</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- CONFIGURAÇÕES DE IA E CLOUD REMOVIDAS -->
 
                     <!-- SUPORTE E AJUDA -->
                     <div class="settings-group">
@@ -1202,6 +1136,11 @@
                         <input type="password" id="reg-password" class="auth-input" placeholder="Mínimo 6 caracteres"
                             required minlength="6">
                     </div>
+                    <div class="auth-input-group">
+                        <label>Código de Convite</label>
+                        <input type="text" id="reg-invite-code" class="auth-input" placeholder="Código secreto"
+                            required>
+                    </div>
                     <button type="submit" class="btn-auth-submit">
                         <i class="fas fa-user-plus"></i> Criar Conta
                     </button>
@@ -1230,47 +1169,7 @@
             </div>
 
             <!-- Update Password Form (Nova Senha) -->
-            <div id="auth-update-pass" class="auth-form-container">
-                <div class="auth-header" style="margin-bottom: 1rem;">
-                    <h3 class="auth-title" style="font-size: 1.2rem;">Nova Senha</h3>
-                    <p class="auth-subtitle">Digite sua nova senha abaixo.</p>
-                </div>
-                <form id="auth-update-pass-form">
-                    <div class="auth-input-group">
-                        <label>Nova Senha</label>
-                        <input type="password" id="new-password" class="auth-input" placeholder="Mínimo 6 caracteres"
-                            required minlength="6">
-                    </div>
-                    <button type="submit" class="btn-auth-submit">
-                        <i class="fas fa-save"></i> Salvar Nova Senha
-                    </button>
-                    <div class="auth-footer" style="margin-top: 10px; cursor: pointer;"
-                        onclick="window.authManager.cancelEditProfile()">Cancelar</div>
-                </form>
-            </div>
-
-            <!-- Edit Profile Form -->
-            <div id="auth-edit-profile" class="auth-form-container">
-                <div class="auth-header" style="margin-bottom: 1rem;">
-                    <h3 class="auth-title" style="font-size: 1.2rem;">Editar Perfil</h3>
-                    <p class="auth-subtitle">Atualize suas informações.</p>
-                </div>
-                <form id="auth-edit-profile-form">
-                    <div class="auth-input-group">
-                        <label>Nome Completo</label>
-                        <input type="text" id="edit-profile-name" class="auth-input" placeholder="Seu Nome" required>
-                    </div>
-                    <div class="auth-input-group">
-                        <label>Avatar URL</label>
-                        <input type="text" id="edit-profile-avatar" class="auth-input" placeholder="URL da imagem">
-                    </div>
-                    <button type="submit" class="btn-auth-submit">
-                        <i class="fas fa-save"></i> Salvar Alterações
-                    </button>
-                    <div class="auth-footer" style="margin-top: 10px; cursor: pointer;"
-                        onclick="window.authManager.cancelEditProfile()">Cancelar</div>
-                </form>
-            </div>
+            <!-- Removed Update Password & Edit Profile forms from here to move to separate modals -->
 
             <div class="auth-footer" style="margin-top: 2rem;">
                 &copy; 2026 PetCá Systems
@@ -1294,6 +1193,89 @@
             }
         });
     </script>
+    <!-- MODAL EDITAR PERFIL -->
+    <div id="profile-edit-modal" class="modal">
+        <div class="modal-content" style="max-width: 400px; border-radius: 24px; padding: 2rem;">
+            <div class="modal-header" style="border-bottom: none; padding-bottom: 0;">
+                <div>
+                    <h3 style="font-size: 1.5rem; margin-bottom: 0.5rem;">Editar Perfil</h3>
+                    <p style="color: #64748b; font-size: 0.9rem;">Atualize seus dados pessoais.</p>
+                </div>
+                <button class="close-modal" onclick="window.authManager.cancelEditProfile()">&times;</button>
+            </div>
+            <form id="auth-edit-profile-form" style="margin-top: 1.5rem;">
+                <div class="form-group" style="margin-bottom: 1.5rem;">
+                    <label style="display: block; margin-bottom: 0.5rem; color: #475569; font-weight: 500;">Nome
+                        Completo</label>
+                    <input type="text" id="edit-profile-name" class="auth-input"
+                        style="width: 100%; padding: 12px; border: 1px solid #cbd5e1; border-radius: 12px; font-size: 1rem;"
+                        placeholder="Seu Nome" required>
+                </div>
+                <div class="form-group" style="margin-bottom: 1.5rem; text-align: center;">
+                    <label style="display: block; margin-bottom: 0.5rem; color: #475569; font-weight: 500;">Foto de
+                        Perfil</label>
+                    <div class="photo-selector-modern"
+                        onclick="document.getElementById('edit-profile-avatar-file').click()"
+                        style="width: 100px; height: 100px; margin: 0 auto; border-radius: 50%; border: 2px dashed #cbd5e1; display: flex; align-items: center; justify-content: center; cursor: pointer; overflow: hidden; position: relative; background: #f8fafc; transition: border-color 0.2s;">
+                        <img id="edit-profile-preview" src=""
+                            style="width: 100%; height: 100%; object-fit: cover; display: none;">
+                        <div class="photo-placeholder" id="edit-profile-placeholder"
+                            style="color: #94a3b8; font-size: 1.5rem;">
+                            <i class="fas fa-camera"></i>
+                        </div>
+                    </div>
+                    <input type="file" id="edit-profile-avatar-file" accept="image/*" hidden
+                        onchange="window.authManager.handleAvatarChange(this)">
+                    <p style="font-size: 0.8rem; color: #94a3b8; margin-top: 8px;">Toque na imagem para alterar</p>
+                </div>
+                <div class="form-actions" style="display: flex; gap: 1rem; justify-content: flex-end;">
+                    <button type="button" class="btn btn-secondary" onclick="window.authManager.cancelEditProfile()"
+                        style="padding: 10px 20px; border-radius: 10px;">Cancelar</button>
+                    <button type="submit" class="btn btn-primary"
+                        style="padding: 10px 20px; border-radius: 10px; display: flex; align-items: center; gap: 8px;">
+                        <i class="fas fa-save"></i> Salvar
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <!-- MODAL ALTERAR SENHA -->
+    <div id="password-change-modal" class="modal">
+        <div class="modal-content" style="max-width: 400px; border-radius: 24px; padding: 2rem;">
+            <div class="modal-header" style="border-bottom: none; padding-bottom: 0;">
+                <div>
+                    <h3 style="font-size: 1.5rem; margin-bottom: 0.5rem;">Nova Senha</h3>
+                    <p style="color: #64748b; font-size: 0.9rem;">Defina uma nova senha segura.</p>
+                </div>
+                <button class="close-modal" onclick="window.authManager.cancelEditProfile()">&times;</button>
+            </div>
+            <form id="auth-update-pass-form" style="margin-top: 1.5rem;">
+                <div class="form-group" style="margin-bottom: 1.5rem;">
+                    <label style="display: block; margin-bottom: 0.5rem; color: #475569; font-weight: 500;">Nova
+                        Senha</label>
+                    <div class="password-wrapper" style="position: relative;">
+                        <input type="password" id="new-password" class="auth-input"
+                            style="width: 100%; padding: 12px; border: 1px solid #cbd5e1; border-radius: 12px; font-size: 1rem;"
+                            placeholder="Mínimo 6 caracteres" required minlength="6">
+                        <button type="button" onclick="window.togglePassword('new-password')"
+                            style="position: absolute; right: 12px; top: 50%; transform: translateY(-50%); background: none; border: none; color: #94a3b8; cursor: pointer;">
+                            <i class="fas fa-eye"></i>
+                        </button>
+                    </div>
+                </div>
+                <div class="form-actions" style="display: flex; gap: 1rem; justify-content: flex-end;">
+                    <button type="button" class="btn btn-secondary" onclick="window.authManager.cancelEditProfile()"
+                        style="padding: 10px 20px; border-radius: 10px;">Cancelar</button>
+                    <button type="submit" class="btn btn-primary"
+                        style="padding: 10px 20px; border-radius: 10px; display: flex; align-items: center; gap: 8px;">
+                        <i class="fas fa-key"></i> Atualizar
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+
     <!-- Global Profile Menu Dropdown -->
     <div id="global-profile-menu" class="profile-menu-dropdown">
         <div class="menu-header-info">
